<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">
    <LinearLayout
        android:id="@+id/ll_one"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:gravity="center"/>

        <!-- Settings Icon -->
        <ImageView
            android:id="@+id/settings_icon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="end"
            android:padding="8dp"
            android:src="@drawable/settings_ic" />
    </LinearLayout>

    <!-- Profile Picture, Bio, and Stats Section -->
    <LinearLayout
        android:id="@+id/ll_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_one"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <!-- Profile Picture and Bio Section -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            >

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:src="@drawable/profile_ic"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/your_name_nyour_bio_goes_here_nyoursite_com"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Stats Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp">

            <!-- Stats Section  -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginBottom="12dp">

                <!-- Posts -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvPosts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_250"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textPosts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/posts"
                        android:textSize="12sp" />
                </LinearLayout>

                <!-- Followers -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvFollowers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_300"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textFollowers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/followers"
                        android:textSize="12sp" />
                </LinearLayout>

                <!-- Following -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvFollowing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_400"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textFollowing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/following"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

            <!-- Edit Profile Button -->
            <Button
                android:id="@+id/edit_profile_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/edit_profile"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/v_one"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/ll_two"
        android:background="#B5B3B1"
        android:layout_marginBottom="6dp"/>

    <LinearLayout
        android:id="@+id/ll_three"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@id/v_one"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_grid"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_menu"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_location"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_community"/>

    </LinearLayout>

    <GridLayout
        android:layout_below="@id/ll_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:id="@+id/GL"
        android:layout_margin="8dp">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="100dp"
            android:src="@drawable/img_one" />
        <ImageView
            android:layout_width="120dp"
            android:layout_height="98dp"
            android:src="@drawable/img_two" />
        <ImageView
            android:layout_width="120dp"
            android:layout_height="98dp"
            android:src="@drawable/img_three" />

        <ImageView
            android:layout_width="138dp"
            android:layout_height="96dp"
            android:src="@drawable/img_four" />
        <ImageView
            android:layout_width="120dp"
            android:layout_height="98dp"
            android:src="@drawable/img_five" />
        <ImageView
            android:layout_width="120dp"
            android:layout_height="98dp"
            android:src="@drawable/img_six" />


    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_grid" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_menu" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_location" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_community" />

    </LinearLayout>

</RelativeLayout>